objects/agf__ADM_Assignment_Rule__c.object
<CustomObject>
   <description>Used to populate the Assignment Rules on ADM_Work__c records</description>
   <fields>
      <fullName>agf__Additional_Emails__c</fullName>
      <label>Followers</label>
      <length>255</length>
      <type>Text</type>
   </fields>
   <fields>
      <fullName>agf__Assignee_Assignment__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <label>Assignee</label>
      <referenceTo>User</referenceTo>
      <relationshipName>Assignment_Rules2</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__Exception_Request_POC__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <description>Person assigned to exception records created from investigation records</description>
      <label>Exception Request POC</label>
      <referenceTo>User</referenceTo>
      <relationshipName>Assignment_Rules5</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__Inactive__c</fullName>
      <defaultValue>false</defaultValue>
      <description>Used to designate if an assignment rule should be applied to work records.</description>
      <inlineHelpText>Used to designate if an assignment rule should be applied to work records.</inlineHelpText>
      <label>Inactive</label>
      <type>Checkbox</type>
   </fields>
   <fields>
      <fullName>agf__Product_Owner__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <inlineHelpText>If this field is empty it will be pre-populated with the Product Owner for the rule's scrum team.</inlineHelpText>
      <label>Product Owner</label>
      <referenceTo>User</referenceTo>
      <relationshipName>Assignment_Rules</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__QA_Assignment__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <label>QA Engineer</label>
      <referenceTo>User</referenceTo>
      <relationshipName>R00NT0000000lhZjMAI</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__Record_Type__c</fullName>
      <inlineHelpText>The Work record type this assignment rule is applicable for</inlineHelpText>
      <label>Record Type</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>Bug</fullName>
            </value>
            <value>
               <fullName>User Story</fullName>
            </value>
            <value>
               <fullName>Investigation</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>agf__Scrum_Team_Assignment__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <label>Scrum Team</label>
      <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
      <relationshipName>R00NT0000000lhZkMAI</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__Senior_Management_POC_Assignment__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <label>Senior Management POC</label>
      <referenceTo>User</referenceTo>
      <relationshipName>Assignment_Rules4</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__Sev_1_Assignee__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <inlineHelpText>This user is assigned to Investigations with Severity Level 1</inlineHelpText>
      <label>Sev 1 Assignee</label>
      <referenceTo>User</referenceTo>
      <relationshipName>Assignment_Rules6</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__Sev_2_Assignee__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <inlineHelpText>This user is assigned to Investigations with a Severity Level of 2.</inlineHelpText>
      <label>Sev 2 Assignee</label>
      <referenceTo>User</referenceTo>
      <relationshipName>Assignment_Rules7</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__Sev_3_Assignee__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <inlineHelpText>This user is assigned to Investigations with Severity Level 3</inlineHelpText>
      <label>Sev 3 Assignee</label>
      <referenceTo>User</referenceTo>
      <relationshipName>Assignment_Rules8</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__Systest_Assignment__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <label>Performance Engineer</label>
      <referenceTo>User</referenceTo>
      <relationshipName>R00NT0000000lhZlMAI</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__Tech_Writer_Assignment__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <label>Tech Writer</label>
      <referenceTo>User</referenceTo>
      <relationshipName>R00NT0000000lhZmMAI</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>agf__UE_Engineer__c</fullName>
      <deleteConstraint>SetNull</deleteConstraint>
      <label>UE Engineer</label>
      <referenceTo>User</referenceTo>
      <relationshipName>Assignment_Rules1</relationshipName>
      <type>Lookup</type>
   </fields>
   <label>Assignment Rule</label>
   <nameField>
      <label>Assignment Rule</label>
      <type>Text</type>
   </nameField>
   <pluralLabel>Assignment Rules</pluralLabel>
   <sharingModel>ReadWrite</sharingModel>
   <validationRules>
      <fullName>agf__ProductOwnerReq</fullName>
      <active>true</active>
      <errorConditionFormula>agf__Product_Owner__c == null</errorConditionFormula>
      <errorDisplayField>agf__Product_Owner__c</errorDisplayField>
      <errorMessage>Product Owner is a required field</errorMessage>
   </validationRules>
   <validationRules>
      <fullName>agf__ScrumTeamIsActive</fullName>
      <active>true</active>
      <errorConditionFormula>AND(ISCHANGED( agf__Inactive__c ), agf__Inactive__c = false, agf__Scrum_Team_Assignment__r.agf__Active__c = false)</errorConditionFormula>
      <errorDisplayField>agf__Scrum_Team_Assignment__c</errorDisplayField>
      <errorMessage>The scrum team you selected is not active.</errorMessage>
   </validationRules>
   <validationRules>
      <fullName>agf__ScrumTeamRequired</fullName>
      <active>true</active>
      <errorConditionFormula>agf__Scrum_Team_Assignment__c == null</errorConditionFormula>
      <errorDisplayField>agf__Scrum_Team_Assignment__c</errorDisplayField>
      <errorMessage>Scrum Team is a required field</errorMessage>
   </validationRules>
</CustomObject>